# pj

./: CLAUDE.md  Cargo.toml  Makefile  README.md  pj.fish  pj.sh
src/: config.rs  lib.rs  main.rs  matcher.rs  picker.rs  scanner.rs
tests/: integration_test.rs
