[package]
name = "pj"
version = "0.1.0"
edition = "2024"

[dependencies]
nucleo = "0.5"
nucleo-picker = "0.9"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
anyhow = "1.0"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.13"
